@@ -1,3 +1,4 @@
+        - Add charset option in ::Digest to handle non-ASCII strings, RT#127553 (rrwo)
 0.00015 2016-06-01
         - Build fixes
 0.00014 2016-05-31
